--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@ document.getElementById('image').src = picture;
 }
 </script>
 
-<img id="image" src="./img/Newnan.jpg" width="600" height="600">
+<img id="image" src="./img/Newnan2.jpg" width="600" height="600">
 
 <p>
 <button type="button" onclick="changeimg(1)">Pensacola, Fl</button>
